changed the link of css file
from sign in.css to 
https://ahgharib.github.io/ahmed%20gharib/sign%20in.css

--- a/ahmed gharib/sign in.html
+++ b/ahmed gharib/sign in.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Sign Up Form</title>
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="sign in.css">
+    <link rel="stylesheet" href="https://ahgharib.github.io/ahmed%20gharib/sign%20in.css">
 </head>
 <body>
     <div class="container">
