--- a/ahmed gharib/sign in.html
+++ b/ahmed gharib/sign in.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
-    <title>Sign Up Form</title>
+    <title>Sign In Form</title>
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="https://ahgharib.github.io/ahmed%20gharib/sign%20in.css">
 </head>
