--- a/ahmed gharib/sign in.html
+++ b/ahmed gharib/sign in.html
@@ -56,5 +56,5 @@
     <div>
         <button onclick="darkMode()" id="b1">Darkmode</button>
       </div>
-    <script src="sign in.js"></script>
+    <script src="https://ahgharib.github.io/ahmed%20gharib/sign%20in.js"></script>
 </body>
